test/snapshot/negative/hxx_strict_phx_events_rejects_literal/EventName.hx
package;

@:phxEventNames
enum abstract EventName(String) from String to String {
    var Save = "save";
}

